=======================================
 Release notes for PyTables 3.2 series
=======================================

:Author: PyTables Developers
:Contact: pytables-dev@googlegroups.com

.. py:currentmodule:: tables


Changes from 3.2.1.1 to 3.2.2
=============================

Bug fixed
---------

- Fix issues with Cython 0.23. See :issue:`481`.
- Only run `tables.tests.test_basics.UnicodeFilename` if the filesystem
  encoding is utf-8. Closes :issue:`485`.
- Fix missing missing PyErr_Clear. See :issue:`#486`.
- Fix the C type of some numpy attributes. See :issue:`494`.


Changes from 3.2.1 to 3.2.1.1
=============================

- Fix permission on distributed source distribution


Changes from 3.2.0 to 3.2.1
===========================

Bug fixed
---------

- Fix indexesextension._keysort. Fixes :issue:`455`. Thanks to Andrew Lin.


Changes from 3.1.1 to 3.2.0
===========================

Improvements
------------

- The `nrowsinbuf` is better computed now for EArray/CArray having
  a small `chunkshape` in the main dimension.  Fixes #285.

- PyTables should be installable very friendly via pip, including NumPy
  being installed automatically in the unlikely case it is not yet
  installed in the system.  Thanks to Andrea Bedini.

- setup.py has been largely simplified and now it requires *setuptools*.
  Although we think this is a good step, please keep us informed this is
  breaking some installation in a very bad manner.

- setup.py now is able to used *pkg-config*, if available, to locate required
  libraries (hdf5, bzip2, etc.). The use of *pkg-config* can be controlled
  via setup.py command line flags or via environment variables.
  Please refer to the installation guide (in the *User Manual*) for details.
  Closes :issue:`442`.

- It is now possible to create a new node whose parent is a softlink to another
  group (see :issue:`422`). Thanks to Alistair Muldal.

- :class:`link.SoftLink` objects no longer need to be explicitly dereferenced.