@@ -366,21 +366,8 @@ class Leaf(Node):
         buffersize = params['IO_BUFFER_SIZE']
         if rowsize != 0:
             nrowsinbuf = buffersize // rowsize
-            if self.__class__.__name__ == "Table":
-                # The number of rows in buffer needs to be an exact multiple of
-                # chunkshape[0] for queries using indexed columns.
-                # Fixes #319 and probably #409 too.
-                nrowsinbuf -= nrowsinbuf % self.chunkshape[0]
         else:
             nrowsinbuf = 1
-
-        # tableextension.pyx performs an assertion
-        # to make sure nrowsinbuf is greater than or
-        # equal to the chunksize.
-        # See gh-206 and gh-238
-        if self.chunkshape is not None and self.__class__.__name__ == "Table":
-            if nrowsinbuf < self.chunkshape[0]:
-                nrowsinbuf = self.chunkshape[0]
 
         # Safeguard against row sizes being extremely large
         if nrowsinbuf == 0:
